<resources>
    <string name="app_name">SASHA</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_loginID">Login ID</string>
    <string name="prompt_password">Password </string>
    <string name="prompt_mobile">Mobile No.</string>
    <string name="prompt_PIN1">Enter PIN </string>
    <string name="prompt_PIN2">Re-Enter PIN</string>
    <string name="action_Next">NEXT</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="msg_enter_securityPin">Register your 4 digit security pin.</string>
    <string name="prompt_instituteCode">Institute Code</string>
    <string name="action_security_pin">Enter security PIN</string>
    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="txtAttendance">Attendance</string>
    <string name="txtSyllabus">Syllabus</string>
    <string name="txteLearning">E-Learning</string>
    <string name="txtFees">Fees</string>
    <string name="txtProfile">Profile</string>
    <string name="txtSchedule">Schedule</string>
    <string name="txtDayWise">Day-Wise</string>
    <string name="txtSpanWise">Span-Wise</string>
    <string name="txtSubjWise">Subject-Wise</string>
    <string name="txtNet">Net Attendance</string>
    <string name="txtTimeTable">Time Table</string>
    <string name="txtName1">Self Attendance Report</string>
    <string name="txtName2">Self Time Table</string>
    <string name="title_notify">Notifications</string>
    <string name="title_messages">Messages</string>
    <string name="title_video">Videos</string>
    <string name="title_events">Events</string>
    <string name="title_profile">Profile</string>
    <string name="txtSylPlan">Teaching Plan</string>
    <string name="txtSylStatus">Syllabus Status</string>
    <string name="txtAcad">Academic Fees</string>
    <string name="txtNonAcad">Non-Academic Fees</string>
    <string name="txtCmpltFee">Complete Fees</string>
    <string name="txtTeachPlanSubName">Subjects</string>
    <string name="txtHeadingTeachPlan">Teaching Plan</string>
    <string name="txtCourse">Course List</string>
    <string name="txtUniversitySyl">University Syllabus</string>
    <string name="txtSubjWiseFac">Subject-wise Faculty</string>
    <string name="txtNetAttnd">Net Attendance</string>
    <string name="txtUnivSyllbus">University Syllabus</string>
    <string name="txtDayAttnd">Day-wise Attendance</string>
    <string name="txtToday">Today</string>
    <string name="txtSpanWiseAttnd">Span-wise Attendance</string>
    <string name="txtSubjAttnd">Subject-wise Attendance</string>
    <string name="txtTimeTbl">Time Table</string>
    <string name="txtMyBatch">My Batches</string>
    <string name="txtExtrLec">Extra Lecture</string>
    <string name="txtAssignment">Assignment</string>
    <string name="txtNotes">Notes</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="txtMyProfile">MY PROFILE</string>
    <string name="title_activity_e__learn_assign">E_LearnAssignActivity</string>
    <string name="home">HOME</string>
    <string name="dashboard">DASHBOARD</string>
    <string name="notification">NOTIFICATION</string>
    <string name="logout">LOGOUT</string>
    <string name="title_logo">NATIONAL GEOGRAPHIC</string>
    <string name="btn_skip_intro">Skip Intro</string>

    <string name="action_news">News</string>
    <string name="action_event">Events</string>
    <string name="action_video">Gallery</string>

    <string name="action_university">University Syllabus</string>
    <string name="action_syllabus_status">Syllabus Status</string>
    <string name="action_teaching_plan">Teaching Plan</string>
    <string name="action_publish_assi">Published Assignments</string>
    <string name="action_Sub_assi">Submitted Assignments</string>
    <string name="action_assignment">Assignments</string>
    <string name="action_notes">Notes</string>
    <!-- <string name="Day_Wise">News</string>
    <string name="action_event">Events</string>
    <string name="action_video">Gallery</string>
-->
    <string name="msg">Software developed by Wordpro Computer Consultancy Services Pvt. Ltd.</string>


    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="library">Library</string>
    <string name="rules">Rules</string>
    <string name="issue_books">Issued Book</string>
    <string name="new_arrivals">New Arrivals</string>
    <string name="book_search">Book Search</string>
    <string name="suggestion">Suggestion</string>
    <string name="fine">Fine</string>
    <string name="certificate">Certificate</string>
    <string name="dialog_title">Books Suggestion Status</string>
    <string name="dialog_message">Book Suggestion saved successfully</string>

    <string-array name="film_genre">

        <item>Dashboard</item>
        <item>Attendance</item>
        <item>Syllabus</item>
        <item>Schedule</item>
        <item>Fees</item>
        <item>E-Learning</item>
    </string-array>

    <string-array name="Dashboard">


    </string-array>

    <string-array name="Attendance">
        <item>Day-Wise </item>
        <item>Span-Wise </item>
        <item>Subject-Wise </item>
        <item>Net Attendance</item>
    </string-array>

    <string-array name="Syllabus">
        <item>University Syllabus</item>
        <item>Teaching Plan</item>
        <item>Syllabus Status</item>
        <item>Subject-Wise Faculty</item>
    </string-array>
    <string-array name="Schedule">
        <item>Time Table</item>
        <item>My Batches</item>
        <item>Extra Lecture</item>
    </string-array>
    <string-array name="Fees">
        <item>Academic Fees</item>
        <item>Non-Academic Fees</item>
        <item>Complete Fees</item>
    </string-array>

    <string-array name="ELearning">
        <item>Assignment</item>
        <item>Notes</item>
    </string-array>


    <!--volley errors-->
    <!--Error Messages-->
    <string name="error_validation">Please check errors.</string>
    <string name="error_timeout">Oops! Your Connection Timed Out please check internet</string>
    <string name="error_auth_failure">Oops! App Says It Doesn\'t Recognize You</string>
    <string name="error_network">Oops! App Server Just Messed Up</string>
    <string name="error_parser">Oops! Data Received Was An Unreadable Mess</string>
    <string name="error_name">enter valid name</string>
    <string name="error_desc">please enter description</string>
    <string name="error_pic">please upload image</string>
    <!--new design enter name-->    <!--new design enter name-->
    <string name="Student_app_name">Student Academic \n Schedule Handling Application</string>
    <string name="Parent_app_name">Institute  \n Linking With Parents</string>
    <string name="btn_next">Next</string>
    <string name="btn_sub">Submit</string>
</resources>
