<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/action_news" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/action_event" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notify"
        android:title="@string/action_video" />

    <item
        android:id="@+id/navigation_logout"
        android:icon="@drawable/ic_power_settings_24dp"
        android:title="@string/logout" />


   <!-- <item
        android:id="@+id/navigation_notify"
        android:icon="@drawable/ic_notify"
        android:title="@string/title_notify" />
    <item
        android:id="@+id/navigation_messages"
        android:icon="@drawable/ic_message"
        android:title="@string/title_messages" />

    <item
        android:id="@+id/navigation_video"
        android:icon="@drawable/ic_video"
        android:title="@string/title_video" />

    <item
        android:id="@+id/navigation_events"
        android:icon="@drawable/ic_event"
        android:title="@string/title_events" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_account"
        android:title="@string/title_profile" />-->

    <!-- <item
         android:id="@+id/navigation_messages"
         android:icon="@drawable/ic_card_giftcard_white_24dp"
         android:title="@string/title_gifts" />

     <item
         android:id="@+id/navigation_cart"
         android:icon="@drawable/ic_shopping_cart_white_24dp"
         android:title="@string/title_cart" />

     <item
         android:id="@+id/navigation_profile"
         android:icon="@drawable/ic_person_white_24dp"
         android:title="@string/title_profile" />-->

</menu>