<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lytMainMenu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightgrey"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.wordpro.studentproject.activities.NavigationActivity"
    tools:showIn="@layout/app_bar_navigation">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:paddingTop="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <LinearLayout
                    android:id="@+id/lytAttendance"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginBottom="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/iconattendance" />

                    <!--
                                        <LinearLayout
                                            android:layout_width="100dp"
                                            android:layout_height="100dp"
                                            android:layout_weight="1"
                                            android:background="@drawable/circlebg"
                                            android:gravity="center"
                                            android:orientation="vertical"
                                            >
                                            <ImageView
                                                android:layout_width="50dp"
                                                android:layout_height="50dp"
                                                android:src="@drawable/iconattendance" />
                                        </LinearLayout>
                    -->
                    <TextView
                        android:id="@+id/txt1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="serif-monospace"
                        android:gravity="center"
                        android:text="@string/txtAttendance"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/txtSizeTwo"
                        android:textStyle="bold" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lytSyllabus"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginBottom="3dp"
                    android:layout_marginLeft="3dp"

                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/iconsyllabus" />

                    <TextView
                        android:id="@+id/txt2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="serif-monospace"
                        android:gravity="center"
                        android:text="@string/txtSyllabus"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/txtSizeTwo"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/lytSchedule"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginBottom="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/iconschedule" />



                    <TextView
                        android:id="@+id/txt3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="serif-monospace"
                        android:gravity="center"
                        android:text="@string/txtSchedule"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/txtSizeTwo"
                        android:textStyle="bold" />

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/lytFees"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginBottom="3dp"
                    android:layout_marginLeft="3dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/iconfees" />


                    <TextView
                        android:id="@+id/txt4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="serif-monospace"
                        android:gravity="center"
                        android:text="@string/txtFees"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/txtSizeTwo"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/lytProfile"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginBottom="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/iconprofile" />



                    <TextView
                        android:id="@+id/txt5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="serif-monospace"
                        android:gravity="center"
                        android:text="@string/txtProfile"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/txtSizeTwo"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lytE_Learning"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginBottom="3dp"
                    android:layout_marginLeft="3dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="20dp">


                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/iconelearning" />


                    <TextView
                        android:id="@+id/txt6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="serif-monospace"
                        android:gravity="center"
                        android:text="@string/txteLearning"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/txtSizeTwo"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:visibility="visible"
                android:layout_marginTop="3dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/lytLibrary"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginBottom="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/library" />

                    <TextView
                        android:id="@+id/txt7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="serif-monospace"
                        android:gravity="center"
                        android:text="@string/library"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/txtSizeTwo"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lytCertificate"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginBottom="3dp"
                    android:layout_marginLeft="3dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:visibility="gone"
                    android:orientation="vertical"
                    android:padding="20dp">


                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/ic_find" />

                    <TextView
                        android:id="@+id/txt8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="serif-monospace"
                        android:gravity="center"
                        android:text="@string/certificate"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/txtSizeTwo"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</RelativeLayout>
